# DnsRelay

./: .gitignore  CMakeLists.txt  README.md
bench/: benchmark.go  benchmark.py  go.mod
docs/: DNS.md  architect.md  cache.md  comments.md  demands.md  design.md  日志与错误处理.md  错误处理.md
docs/report/: Cname缓存无法命中汇总.md  ~$计算机网络课程设计-DNS(6) (1).pptx  代码修改建议.md  实验报告.docx  实验报告.md  计算机网络课程设计-DNS(6) (1).pptx
include/dns/: cache.h  config.h  id.h  protocol.h  server.h
include/infra/: config.h  exception.h  logger.h  socket.h  stl.h  sys.h  thread.h  utils.h
include/server/: daemon.h  server.h  session.h
scripts/: README.md  bench_test.sh  build.sh  test.py  test_unit.sh
src/: main.c
src/dns/: dns_cache.c  dns_resolver.c  id_factory.c
src/infra/: config_center.c  exception.c  logger.c  sock_posix.c  stl.c  utils.c
src/infra/linux/: exception.c  sock_linux.c  sock_posix.c  sys_linux.c  thread_posix.c
src/infra/windows/: sock_win.c  sys_win.c
src/server/: daemons.c  server.c  session_factory.c
src/service/: main.c  server.c
src/service/ui/: README.md  main.c
test/: test_cache.c  test_config.c  test_daemon.c  test_exception.c  test_id.c  test_platform_utils.c  test_protocol.c  test_session.c  test_socket.c  test_stl.c  test_utils.h
